[package]
name = "grin-explorer"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket      = "0.5.0"
serde       = {version = "1.0.198", features = ["derive"]}
serde_json  = "1.0.111"
num-format  = "0.4.4"
fs_extra    = "1.3.0"
colored     = "2.1.0"
humantime   = "2.1.0"
chrono      = "0.4.37"
futures     = "0.3.30"
config      = "0.14.0"
lazy_static = "1.4.0"
shellexpand = "3.1.0"
either      = "1.11.0"
anyhow      = "1.0.86"

[dependencies.reqwest]
version  = "0.11.23"
features = ["json", "blocking"]

[dependencies.rocket_dyn_templates]
version  = "0.1.0"
features = ["tera"]

