[package]
name = "grin-explorer"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow         = "1.0.86"
chrono         = "0.4.37"
config         = "0.14.0"
either         = "1.11.0"
env_logger     = "0.11.3"
fs_extra       = "1.3.0"
futures        = "0.3.30"
humantime      = "2.1.0"
lazy_static    = "1.4.0"
num-format     = "0.4.4"
rocket         = {version = "0.5.0", features = ["json"]}
rusqlite       = "0.32.1"
serde          = {version = "1.0.198", features = ["derive"]}
serde_json     = "1.0.111"
shellexpand    = "3.1.0"
tera_thousands = "0.1.0"

[dependencies.reqwest]
version  = "0.11.23"
features = ["json", "blocking"]

[dependencies.rocket_dyn_templates]
version  = "0.1.0"
features = ["tera"]

